# XyroSubscriptionBot

./: .gitignore  README.md  flake.nix  pyproject.toml  sample_config.yml
XyroSub/: __init__.py  __main__.py
XyroSub/database/: __init__.py  affiliate.py  discount.py  subscription.py  users.py
XyroSub/helpers/: decorators.py  misc.py  string_utils.py  yaml.py
XyroSub/modules/: admins.py  affiliate.py  discount.py  help.py  ping.py  start.py  subscription.py
